tests/ifcc-test-output/testfiles-comparatives-inferior-inf_var_error_undeclared/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:14: error: ‘b’ undeclared (first use in this function)
    3 |     return a<b;
      |              ^
input.c:3:14: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
